<resources>
    <string name="app_name">VeganApp</string>
    <string name="title_cook_book">Cook Book</string>
    <string name="title_fav_recipes">Favourite</string>
    <string name="title_notifications">Notifications</string>
    <string name="banner_ad_unit_id">ca-app-pub-6896399861367141/1518357113</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complexity">Complexity</string>
    <string name="ingredients_title">Ingredients:</string>
    <string name="long_test_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="recipe_title">Recipe</string>
    <string name="network_problem">Problem with network... Some functions may be unavailable!</string>
    <string name="add_to_fav">Add to fav</string>
    <string name="map">Map</string>
    <string name="recipe_deleted">Recipe deleted</string>
    <string name="recipe_restored">Recipe restored</string>
    <string name="restore">Restore</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="settings">Settings</string>
    <string name="bug_report">Bug report</string>
    <string name="email">Email</string>
    <string name="search">Search...</string>
    <string name="pick_a_recipe">Pick a recipe</string>
    <string name="results">Results</string>
    <string name="hide">Hide</string>
    <string name="create_menu">Create Menu</string>
    <string name="see_more">See more...</string>
    <string name="find">Find</string>
    <string name="map_not_ready">Map not ready</string>
    <string name="ban_ingredient">Ban ingredient</string>
    <string name="pick_recipe_instruction">Click on \"+\" to add ingredients you have. Click on \"+\" to ban undesirable ingredients.</string>

</resources>