<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/options_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionLayout="@layout/search_view_layout"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/options_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>

    <item
        android:id="@+id/options_bug_rep"
        android:icon="@drawable/bug_report"
        android:title="@string/bug_report"/>

    <item
        android:id="@+id/options_email"
        android:icon="@drawable/mail"
        android:title="@string/email"/>
</menu>