<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CookInstructionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/instr_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/instr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_below="@+id/instr_image"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/instr_ingestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:layout_below="@+id/instr_name"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/instr_complexity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complexity"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/instr_ingestion"
            android:layout_marginStart="10dp" />

        <RatingBar
            android:id="@+id/instr_complexity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/instr_complexity_text"
            style="@style/InstrRate"/>

        <TextView
            android:id="@+id/instr_rate_num"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/instr_ingestion" />

        <ImageView
            android:id="@+id/instr_rate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/like"
            android:scaleType="fitCenter"
            android:layout_toStartOf="@id/instr_rate_num"
            android:layout_below="@id/instr_ingestion" />

        <TextView
            android:id="@+id/instr_views_num"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/instr_rate_num" />

        <ImageView
            android:id="@+id/instr_views"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/eye"
            android:scaleType="fitCenter"
            android:layout_toStartOf="@id/instr_views_num"
            android:layout_below="@id/instr_rate" />

        <TextView
            android:id="@+id/instr_ingr_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="@string/ingredients_title"
            android:layout_below="@+id/instr_complexity"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/instr_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_below="@+id/instr_ingr_title"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/instr_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_below="@+id/instr_ingredients"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/instr_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_below="@+id/instr_recipe_title"
            android:layout_marginStart="10dp" />

    </RelativeLayout>
</ScrollView>